fix: flex wrapping of Sectional Duos
For unclear reasons, the default flex wrapping behavior for "inline"
screen types is sufficient not to cut off Sectional Solos, but does cut
off Sectional Duos.

--- a/assets/css/screen-detail.scss
+++ b/assets/css/screen-detail.scss
@@ -11,6 +11,8 @@
   padding: 16px;
 
   &--inline {
+    // account for widest "inline" screen type, currently Sectional Duos
+    min-width: 390px;
     flex-grow: 1;
 
     &:not(:last-child) {
